--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,15 +15,23 @@
         android:theme="@style/Theme.Mis_Plantitass"
         tools:targetApi="31">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.MyPlantsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.WelcomeActivity"
             android:exported="true">
             <intent-filter>
+
+                <!-- ESTO INDICA SI ES EL PRINCIPAL ACTIVITY QUE SE VA A CARGAR -->
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.DetailActivity"></activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true"></activity>
+        <activity android:name=".activities.DetailActivity" />
     </application>
 
 </manifest>
