--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:name=".activities.MainActivity"
             android:exported="true"></activity>
         <activity android:name=".activities.DetailActivity" />
+        <activity android:name=".activities.AddPlantActivity"></activity>
     </application>
 
 </manifest>
