--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
             android:exported="true"></activity>
         <activity android:name=".activities.DetailActivity" />
         <activity android:name=".activities.AddPlantActivity"></activity>
+
+        <activity android:name=".activities.MyPlantDetailActivity"></activity>
     </application>
 
 </manifest>
